<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradienthome"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="40sp"
        android:paddingRight="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/archieLogoId"
                android:layout_width="match_parent"
                android:layout_height="112dp"
                android:layout_marginBottom="10sp"
                android:contentDescription="@string/archieImg"
                app:srcCompat="@drawable/archie" />

            <TextView
                android:id="@+id/archieTagID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp"
                android:text="@string/archieTag"
                android:textSize="18sp"
                android:textStyle="italic"
                tools:textAlignment="center" />

            <Button
                android:id="@+id/btnLearn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/greenBtn"
                android:onClick="goLearn"
                android:text="@string/learnMore"
                tools:textAlignment="center" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="80sp"
                android:orientation="horizontal"
                android:paddingLeft="10sp"
                android:paddingRight="10sp">

                <Button
                    android:id="@+id/btnView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:height="70sp"
                    android:onClick="goView"
                    android:singleLine="false"
                    android:text="@string/viewTxt"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/btnLoc"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10sp"
                    android:layout_weight="1"
                    android:onClick="goLoc"
                    android:text="@string/archieLoctxt"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/btnStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10sp"
                    android:layout_weight="1"
                    android:onClick="goStatus"
                    android:text="@string/archieStatusTxt"
                    android:textSize="12sp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>