<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".archieStatus">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/titleStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40sp"
            android:layout_marginBottom="40sp"
            android:background="@color/darkerGreen"
            android:text="@string/ArchieStatus"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="36sp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="273dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:layout_marginRight="20sp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="580dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tempValueId"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10sp"
                        android:text="@string/tempValue"
                        android:textAlignment="center"
                        android:textSize="30sp" />

                    <TextView
                        android:id="@+id/tempTxtId"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tempTxt"
                        android:textAlignment="center" />

                </LinearLayout>

            </LinearLayout>
        </ScrollView>

        <ImageView
            android:id="@+id/tempImgId"
            android:layout_width="match_parent"
            android:layout_height="329dp"
            android:contentDescription="@string/TempImgVal"
            app:srcCompat="@drawable/sun" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>