<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgstatus"
    android:paddingLeft="20dp"
    android:paddingTop="60dp"
    android:paddingRight="20dp"
    android:paddingBottom="60dp"
    tools:context=".archieStatus">

    <LinearLayout
        android:id="@+id/bckId"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="60dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:contentDescription="@string/bck"
            app:srcCompat="@drawable/icons8_home_64" />

        <TextView
            android:id="@+id/homeText"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:letterSpacing="1"
            android:paddingTop="9dp"
            android:paddingBottom="9dp"
            android:text="@string/bck"
            android:textAlignment="center"
            android:textSize="12sp"
            tools:textAllCaps="true" />
    </LinearLayout>

    <ImageView
        android:id="@+id/tempImgId"
        android:layout_width="0dp"
        android:layout_height="147dp"
        android:contentDescription="@string/TempImgVal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bckId"
        app:srcCompat="@drawable/sun" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tempImgId"
        app:layout_constraintVertical_bias="0.119">

        <TextView
            android:id="@+id/tempTxtId"
            android:layout_width="match_parent"
            android:layout_height="23dp"
            android:text="@string/tempTxt"
            android:textAlignment="center"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/tempValueId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/unavailableTxt"
            android:textAlignment="center"
            android:textSize="50sp" />

        <TextView
            android:id="@+id/statusTempVal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:letterSpacing="0.5"
            android:text="@string/unavailableTxt"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/minTempVal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/unavailableTxt"
                    android:textAlignment="center"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/minTempTextId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:letterSpacing="0.3"
                    android:text="@string/minTempTxt"
                    android:textAlignment="center"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/maxTempVal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/unavailableTxt"
                    android:textAlignment="center"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/maxTempText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:letterSpacing="0.3"
                    android:text="@string/maxTempTxt"
                    android:textAlignment="center"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/humVal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/unavailableTxt"
                    android:textAlignment="center"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/humTextId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:letterSpacing="0.5"
                    android:text="@string/humTxt"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textSize="12sp"
                    tools:lineSpacingExtra="10sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/precVal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/unavailableTxt"
                    android:textAlignment="center"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/precTextId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:letterSpacing="0.5"
                    android:text="@string/precTxt"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/cloudVal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/unavailableTxt"
            android:textAlignment="center"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/cloudText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:letterSpacing="0.5"
            android:text="@string/cloudTxt"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="12sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>